# my-pytest-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
my_pytest_experiments/my_logger/: my_logger.py
tests/: test_example.py  test_sample.py  test_some_class.py
tests/ui/: test_ui_sample.py
