[tool.poetry]
name = "my-pytest-experiments"
version = "0.1.0"
description = ""
authors = ["Leonardo Tsuda <3965277+ltsuda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
indent-width = 4

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
extend-select = ["C901", "N", "UP"]

[tool.pytest.ini_options]
addopts = "-rsx -vv -s"
