[tool.poetry]
name = "my-pytest-experiments"
version = "0.1.0"
description = ""
authors = ["Leonardo Tsuda <3965277+ltsuda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
python-slugify = "^8.0.1"
pytest-html = "^4.1.1"
allure-pytest = "^2.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
indent-width = 4

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
extend-select = ["C901", "N", "UP"]

[tool.pytest.ini_options]
addopts = "-rsx -vv -s --show-capture=no"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s (%(name)s) %(levelname)s %(message)s"
log_cli_date_format = "%d-%m-%Y %H:%M:%S"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s (%(name)s) %(levelname)s %(message)s"
log_file_date_format = "%d-%m-%Y %H:%M:%S"
